[package]
name = "moco"
version = "0.0.0"
description = "Multi-Objective Combinatorial Optimization library"
authors = ["Alexandre D. Jesus <adbjesus@gmail.com>"]
repository = "https://github.com/adbjesus/moco"
homepage = "https://github.com/adbjesus/moco"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
